- added possibility to delete multiple open questions (Thorsten)
- added user control panel (Thorsten)
- added support for Composer (Thorsten)
- added online verification check (Thorsten, Florian)
- added configurable maintenance mode (Thorsten)
- added user notification for answered questions (Thorsten)
- added possibility to deactivate complete FAQ export (Thorsten)
- added documentation in Markdown with GitHub style HTML export (Thorsten)
- improved usability of administration backend (Thorsten)
- improved setup and update (Thorsten, Florian)
- improved security with salted passwords (Thorsten)
- improved attachment functionality (Thorsten)
- improved CSS development with LESS (Thorsten)
- improved minified CSS output (Thorsten)
- simplified the link verification (Thorsten)
- dropped support for IBM DB2, Interbase/Firebird and Sybase (Thorsten)
- updated bundled jQuery to version 1.8.2 (Thorsten)
- updated bundled Modernizr to version 2.6.2 (Thorsten)
- updated bundled Bootstrap to version 2.2.2 (Thorsten)
- updated bundled TinyMCE to version 3.5.7 (Thorsten)
- updated bundled Symfony ClassLoader to version 2.1.6 (Alexander M. Turek)
- updated PHP dependency management using Composer (Thorsten)
- updated Czech translation (Jaroslav Síka)
- fixed some bugs (Thorsten, Florian)

Version 2.7.9 - 2012-09-
- updated French translation

Version 2.7.8 - 2012-08-22
- added experimental rewrite rules for Zeus Webserver (Chris Crawshaw)
- updated Arabic translation
- updated Dutch translation
- updated Spanish translation (Lisandro López Villatoro)
- improved LDAP handling (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.7 - 2012-07-01
- added Bosnian translation (Alen Durmo)
- improved complete PDF export (Thorsten)
- updated Polish translation
- updated Simplified Chinese translation
- fixed Arabian and Bengali translation (Thorsten)
- fixed some bugs (Thorsten)

Version 2.7.6 - 2012-05-16
- updated Dutch translation
- updated Polish translation