@@ -20,6 +20,7 @@ Version 2.8.0-beta - 2012-
 - added configurable maintenance mode (Thorsten)
 - added user notification for answered questions (Thorsten)
 - added possibility to deactivate complete FAQ export (Thorsten)
+- added possibility to random sorting of FAQs (Thorsten)
 - added documentation in Markdown with GitHub style HTML export (Thorsten)
 - improved usability of administration backend (Thorsten)
 - improved setup and update (Thorsten, Florian)
